# cc-ralph-wiggum-observability

./: .gitignore  .mcp.json  CLAUDE.md  HOW-CLAUDECODE-BUIL-IT.md  HOW-CLAUDECODE-BUILD-IT-FOR-ME.md  HOW-TO-RUN.md  MCP_README.md  MCP_SERVER_README.md  README.md  main.py  mcp.json  mcp_server.py  pyproject.toml  requirements-mcp.txt  simple_test_mcp.py  test_main.py  test_mcp_server.py  test_todos.db  todos.db
frontend/: README.md  index.html  package-lock.json  package.json  todo-app.js  todo-app.test.js
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html  todo-app.js.html
